Changed all steps 1-4
1. Moved all previous files into archive
2. Changed steps 1-4 so that they are modular and easy to understand. The main change is the inclusion of function update()
3. Index filer remains unchanged and needs to be adjusted so that it reflects new steps 1-4

--- a/css/customize.css
+++ b/css/customize.css
@@ -149,16 +149,21 @@ a img:hover	{
 
 
 a:hover, a:focus {
+  color: rgb(100,0,0);
 }
 a, a:visited {
-	/* text-decoration:none; */
+	text-decoration:none;
 }
 
 
 a {
-  color: #222; } /*#*/
+  /* color: rgb(100,0,0); */
+  font-weight: bold;
+  } /*#*/
 a:hover {
-  color: #33C3F0; }
+  color: rgb(255,0,0);
+  /* color: #33C3F0;  */
+}
 
   a.emphasis {
     color: #33C3F0; } /*#222*/
